src/tests/fixtures/errors/unclosed-raw.hbs
<pre><code>{{{{snippet}}}}body never closed</code></pre>